# aftok

./: README.md  aftok.cabal  cabal.project  docker-compose.yml  flake.nix
client/: package-lock.json  package.json  spago.yaml
client/dev/: index.html
client/src/: Main.purs
client/src/Aftok/: Billing.purs  Login.purs  Navigation.purs  Overview.purs  ProjectList.purs  Signup.purs  Timeline.purs  Types.purs
client/src/Aftok/Api/: Account.purs  Billing.purs  Json.purs  Project.purs  Recaptcha.js  Timeline.purs  Types.purs
client/src/Aftok/Billing/: Create.purs  PaymentRequest.purs
client/src/Aftok/Components/: Zip321QR.purs
client/src/Aftok/HTML/: Forms.purs  QRious.js  QRious.purs
client/src/Aftok/Modals/: ModalFFI.js  ModalFFI.purs
client/src/Aftok/Projects/: Create.purs  Invite.purs
client/src/Landkit/: Card.purs  Modal.purs
lib/Aftok/Currency/: Zcash.hs
server/: Main.hs
server/Aftok/: ServerConfig.hs
server/Aftok/Snaplet/: Users.hs
