cabal-version: 3.0
Name:          aftok
Version:       0.1
Synopsis:      The Aftok Collaboration Platform
Description:   A time logging and payment distribution service to enable groups of trusted contributors
               to collaboratively develop commercial applications.
License:       NONE
Author:        Kris Nuttycombe
Maintainer:    kris@aftok.com
Stability:     Experimental
Category:      Web
Build-type:    Simple

common buildenv
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror
  default-extensions: GADTs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , OverloadedStrings
                    , RankNTypes
                    , ScopedTypeVariables

common base-deps
  build-depends:
      base >= 4.16.4 && < 4.17
    , relude >= 1.1.0 && < 1.2
    , aeson >= 2.0.3 && < 2.1
    , attoparsec >= 0.14.4 && < 0.15
    , bifunctors >= 5.5.15 && < 5.6
    , bippy >= 0.3 && < 0.4
    , bytestring >= 0.11.4 && < 0.12
    , cereal >= 0.5.8 && < 0.6
    , configurator >= 0.3.0 && < 0.4
    , containers >= 0.6.5 && < 0.7
    , cryptonite >= 0.30 && < 0.31
    , either >= 5.0.2 && < 5.1
    , errors >= 2.3.0 && < 2.4
    , from-sum >= 0.2.3 && < 0.3
    , HStringTemplate >= 0.8.8 && < 0.9
    , HsOpenSSL >= 0.11.7 && < 0.12
    , haskoin-core >= 0.21.2 && < 0.22
    , hourglass >= 0.2.12 && < 0.3
    , http-client >= 0.7.13 && < 0.8
    , http-types >= 0.12.3 && < 0.13
    , iso8601-time >= 0.1.5 && < 0.2
    , lens >= 5.1.1 && < 5.2
    , mtl >= 2.2.2 && < 2.3
    , network >= 3.1.2 && < 3.2
    , network-uri >= 2.6.4 && < 2.7
    , postgresql-simple >= 0.6.4 && < 0.7
    , protobuf >= 0.2.1 && < 0.3
    , semigroups >= 0.20 && < 0.21
    , smtp-mail >= 0.3.0 && < 0.4
    , system-filepath >= 0.4.14 && < 0.5
    , template-haskell >= 2.18.0 && < 2.19
    , text >= 1.2.5 && < 1.3
    , thyme >= 0.4 && < 0.5
    , transformers >= 0.5.6 && < 0.6
    , uuid >= 1.3.15 && < 1.4
    , unordered-containers >= 0.2.19 && < 0.3
    , vector-space >= 0.16 && < 0.17
    , x509 >= 1.7.7 && < 1.8
    , x509-store >= 1.6.9 && < 1.7
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)

common service-deps
  build-depends:
      base64-bytestring >= 1.2.1 && < 1.3
    , http-client-openssl >= 0.3.3 && < 0.4
    , mime-mail >= 0.5.1 && < 0.6
    , optparse-applicative >= 0.17.0 && < 0.18
    , wreq >= 0.5.4 && < 0.6

library
  import:             buildenv, base-deps
  hs-source-dirs:     lib
  exposed-modules:    Aftok.Auction
                      Aftok.Billing
                      Aftok.Config
                      Aftok.Currency
                      Aftok.Currency.Bitcoin
                      Aftok.Currency.Bitcoin.Payments
                      Aftok.Currency.Bitcoin.Bip70
                      Aftok.Currency.Zcash
                      Aftok.Currency.Zcash.Types
                      Aftok.Currency.Zcash.Payments
                      Aftok.Currency.Zcash.Zip321
                      Aftok.Database
                      Aftok.Database.PostgreSQL
                      Aftok.Database.PostgreSQL.Json
                      Aftok.Database.PostgreSQL.Types
                      Aftok.Database.PostgreSQL.Auctions
                      Aftok.Database.PostgreSQL.Billing
                      Aftok.Database.PostgreSQL.Events
                      Aftok.Database.PostgreSQL.Projects
                      Aftok.Database.PostgreSQL.Users
                      Aftok.Interval
                      Aftok.Json
                      Aftok.Payments
                      Aftok.Payments.Types
                      Aftok.Payments.Bitcoin
                      Aftok.Payments.Zcash
                      Aftok.Payments.Util
                      Aftok.Project
                      Aftok.TimeLog
                      Aftok.TimeLog.Serialization
                      Aftok.Types
                      Aftok.Util
                      Aftok.Util.Http
  build-depends:
    , basement >= 0.0.15 && < 0.1
    , blake2 >= 0.3.0 && < 0.4
    , base64 >= 0.4.2 && < 0.5
    , blaze-builder >= 0.4.2 && < 0.5
    , free >= 5.1.10 && < 5.2
    , groups >= 0.5.3 && < 0.6
    , heaps >= 0.4 && < 0.5
    , kan-extensions >= 5.2.5 && < 5.3
    , lens-aeson >= 1.2.2 && < 1.3
    , MonadRandom >= 0.5.3 && < 0.6
    , old-locale >= 1.0.0 && < 1.1
    , safe >= 0.3.19 && < 0.4
    , scientific >= 0.3.7 && < 0.4
    , semigroupoids >= 5.3.7 && < 5.4
    , uri-encode >= 1.5.0 && < 1.6

Test-Suite spec
  import:             buildenv, base-deps
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules: Aftok.AuctionSpec
               , Aftok.Generators
               , Aftok.PaymentsSpec
               , Aftok.TimeLogSpec
               , Aftok.Util.HttpSpec

  build-depends:
      aftok
    , hspec
    , HUnit
    , QuickCheck

  build-tool-depends: hspec-discover:hspec-discover

Executable aftok-server
  import:             buildenv, base-deps, service-deps
  ghc-options:        -Wall -Werror
  hs-source-dirs:     server

  main-is:            Main.hs

  other-modules: Aftok.ServerConfig
               , Aftok.Snaplet
               , Aftok.Snaplet.Auctions
               , Aftok.Snaplet.Auth
               , Aftok.Snaplet.Billing
               , Aftok.Snaplet.Json
               , Aftok.Snaplet.Payments
               , Aftok.Snaplet.Projects
               , Aftok.Snaplet.Users
               , Aftok.Snaplet.Util
               , Aftok.Snaplet.WorkLog

  build-depends:
      aftok
    , directory                 >= 1.3.6
    , http-client-tls           >= 0.3.6
    , snap                      >= 1.1.3
    , snap-core                 >= 1.0.5
    , snap-server               >= 1.1.2
    , snaplet-postgresql-simple >= 1.2.0

Executable aftok-daemon
  import:             buildenv, base-deps, service-deps
  hs-source-dirs:     daemon

  main-is:            Main.hs
  other-modules:      AftokD
                    , AftokD.AftokM
  build-depends:
      aftok
